Sending Current Location at certain time. AJAX POST

--- a/web/res/loginPage/style.css
+++ b/web/res/loginPage/style.css
@@ -10,7 +10,7 @@ ul, li {
 }
 
 body {
-    background: url("../../header_2.jpg");
+    background: url("../pics/header_2.jpg");
     /*background-size: 100vw 100vh;*/
 }
 
