--- a/web/res/loginPage/style.css
+++ b/web/res/loginPage/style.css
@@ -10,8 +10,12 @@ ul, li {
 }
 
 body {
+    /*max-width: 100%;*/
+    /*max-height: 100%;*/
+
     background: url("../pics/header_2.jpg");
-    /*background-size: 100vw 100vh;*/
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
 }
 
 .main-nav {
